--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -7,17 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "both": "concurrently \"npm run dev\" \"npx nodemon ../server/app.js\""
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "bootstrap": "^5.3.3",
-    "concurrently": "^8.2.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
