--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
